--- a/components/navbar/Navbar.module.css
+++ b/components/navbar/Navbar.module.css
@@ -1,14 +1,69 @@
+/* Navigation Bar */
 .navbar {
 	display: flex;
 	flex-direction: column;
 	align-items: flex-start;
-	width: 60px;
+	width: 100%;
 	height: 100vh;
 	padding: 2rem 1rem;
-	transition: width 0.5s ease;
+	transition: width 0.5s ease; /* Specify 'width' for clarity */
 	background-color: white;
+	z-index: 1000;
 }
 
 .expanded {
 	width: 220px;
+}
+
+.collapsed {
+	width: 70px;
+}
+
+/* Navigation Links */
+.linkContainer {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	margin: 1rem 0;
+	cursor: pointer;
+}
+
+.linkContainer:hover .linkIcon {
+	background-color: var(--primary-color);
+	color: white;
+}
+
+/* Navigation Icons */
+.linkIcon {
+	color: var(--secondary-color);
+	padding: 0.5rem;
+	transition: none;
+	border-radius: 8px;
+	background-color: rgb(250, 250, 250);
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.linkContainerExpanded {
+	overflow: hidden;
+	width: 0;
+	transition: width 0.5s ease;
+}
+
+.expanded .linkContainerExpanded {
+	width: 150px;
+}
+
+.linkText {
+	white-space: nowrap;
+	text-decoration: none;
+	font-size: 1rem;
+	margin-left: 1.4rem;
+	font-weight: 400;
+	color: var(--secondary-color);
+	opacity: 0;
+	transition: opacity 0.3s ease;
+}
+
+.expanded .linkText {
+	opacity: 1;
 }
